[workspace]
members = ["test_utils"]
exclude = ["fuzz"]
# v2 so msrv does not hold up dependence versions like in v3
resolver = "2"

[package]
name = "geogram_predicates"
description = "Rust port of the Geogram library's predicates module"
version = "0.2.1"
edition = "2024"
rust-version = "1.85.1"

repository = "https://github.com/glennDittmann/geogram_predicates"
authors = ["Glenn Dittmann", "TimTheBig"]
# when the legacy feature is enabled the c++ code it use is apache
license = "MIT OR (MIT AND Apache-2.0)"

keywords = ["computer-graphics", "math", "geometry", "predicates", "robust"]
categories = ["no-std", "mathematics", "graphics"]

[dependencies]
smallvec = "2.0.0-alpha.12"
nalgebra = { version = "0.34", features = ["macros", "matrixmultiply"], default-features = false }
robust = { version = "1.2", features = ["no_std"] }
# legacy
cxx = { version = "1.0", features = ["alloc", "c++20"], default-features = false, optional = true }
libm = { version = "0.2", optional = true }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }

[dev-dependencies]
float_extras = "0.1"
test_utils = { path = "test_utils" }

[features]
legacy = ["dep:cxx", "dep:cxx-build"]
no_std = ["dep:libm"]
